--- a/automationsfinal.yaml
+++ b/automationsfinal.yaml
@@ -143,3 +143,165 @@
     at: "01:00:00"
   action:
     - service: homeassistant.restart
+    
+##july 2021 ##final    
+# Automation for 4 times Azan
+- action:
+  - alias: 'Azan'
+    data:
+      entity_id: media_player.azan_group
+      media_content_id: https://www.islamcan.com/audio/adhan/azan2.mp3
+      media_content_type: audio/mp3
+    service: media_extractor.play_media
+  - data:
+      entity_id: media_player.azan_group
+      volume_level: '0.7'
+    service: media_player.volume_set
+  alias: Adhan
+  trigger:
+    - platform: template
+      value_template: '{{ as_timestamp(strptime(states("sensor.time_date"), "%H:%M, %Y-%m-%d")) == as_timestamp(strptime(states("sensor.islamic_prayer_time_dhuhr"), "%Y-%m-%dT%H:%M:%S")) }}'
+    - platform: template
+      value_template: '{{ as_timestamp(strptime(states("sensor.time_date"), "%H:%M, %Y-%m-%d")) == as_timestamp(strptime(states("sensor.islamic_prayer_time_asr"), "%Y-%m-%dT%H:%M:%S"))+3600 }}'
+    - platform: template
+      value_template: '{{ as_timestamp(strptime(states("sensor.time_date"), "%H:%M, %Y-%m-%d")) == as_timestamp(strptime(states("sensor.islamic_prayer_time_maghrib"), "%Y-%m-%dT%H:%M:%S")) }}'
+    - platform: template
+      value_template: '{{ as_timestamp(strptime(states("sensor.time_date"), "%H:%M, %Y-%m-%d")) == as_timestamp(strptime(states("sensor.islamic_prayer_time_isha"), "%Y-%m-%dT%H:%M:%S")) }}'
+
+- action:
+  - alias: 'Azan Fajr'
+    data:
+      entity_id: media_player.office_speaker, media_player.family_room_clock
+      media_content_id: https://media.sd.ma/assabile/adhan_3435370/dcc77fd7b6a1.mp3
+      media_content_type: audio/mp3
+    service: media_extractor.play_media
+  - data:
+      entity_id: media_player.azan_group
+      volume_level: '0.6'
+    service: media_player.volume_set
+  alias: Adhan_Fajr
+  trigger:
+    - platform: template
+      value_template: '{{ as_timestamp(strptime(states("sensor.time_date"), "%H:%M, %Y-%m-%d")) == as_timestamp(strptime(states("sensor.islamic_prayer_time_fajr"), "%Y-%m-%dT%H:%M:%S")) }}' 
+######################### Azakaar 1 ##################################
+- action:
+  - data:
+      entity_id: media_player.azan_group
+#      entity_id: media_player.kids_speaker
+      media_content_id: https://music.watannetwork.com/musicExcel/Azkar.mp3
+      media_content_type: audio/mp3
+    service: media_player.play_media
+  - data:
+      entity_id: media_player.azan_group
+#      entity_id: media_player.kids_speaker
+      volume_level: '0.5'
+    service: media_player.play_media
+  alias: Play Azkaar Sabah
+  trigger:
+    - platform: time
+      at: "07:30:00"
+
+#########################Surah Waqiah##################################
+- action:
+  - data:
+      entity_id: media_player.azan_group
+      media_content_id: https://www.islamcan.com/quran-mp3/alafasy/056-al-waqiah.mp3
+      media_content_type: audio/mp3
+    service: media_player.play_media
+  - data:
+      entity_id: media_player.azan_group
+      volume_level: '0.5'
+    service: media_player.play_media
+  alias: Play Surah Waqiah
+#  trigger:
+#    - platform: time
+#      at: "18:15:00"
+
+#########################Surah Kahf##################################
+- action:
+  - data:
+      entity_id: media_player.azan_group
+      media_content_id: https://www.islamcan.com/quran-mp3/alafasy/018-al-kahf.mp3
+      media_content_type: audio/mp3
+    service: media_player.play_media
+  - data:
+      entity_id: media_player.azan_group
+      volume_level: '0.5'
+    service: media_player.play_media
+  alias: Play Surah Kahf
+#  trigger:
+#    - platform: time
+#      at: "11:00:00"  
+    
+#########################Surah Yaseen##################################
+- action:
+  - data:
+      entity_id: media_player.azan_group
+      media_content_id: https://www.islamcan.com/quran-mp3/alafasy/036-ya-sin.mp3
+      media_content_type: audio/mp3
+    service: media_player.play_media
+  - data:
+      entity_id: media_player.azan_group
+      volume_level: '0.5'
+    service: media_player.play_media
+  alias: Play Surah Yaseen
+  trigger:
+    - platform: time
+      at: "08:30:00"    
+    
+############################# Azakaar 2 ##################################
+- action:
+  - data:
+      entity_id: media_player.azan_group
+      media_content_id: https://music.watannetwork.com/musicExcel/Azkar2.mp3
+      media_content_type: audio/mp3
+    service: media_player.play_media
+  - data:
+      entity_id: media_player.azan_group
+      volume_level: '0.5'
+    service: media_player.play_media
+  alias: Play Azkaar Masa
+  trigger:
+    - platform: time
+      at: "19:30:00"
+###############################Surah Mulk#####################################
+- action:
+  - data:
+      entity_id: media_player.azan_group
+      media_content_id: https://www.islamcan.com/quran-mp3/alafasy/067-al-mulk.mp3
+      media_content_type: audio/mp3
+    service: media_player.play_media
+  - data:
+      entity_id: media_player.azan_group
+      volume_level: '0.5'
+    service: media_player.play_media
+  alias: Play Surah Mulk
+  trigger:
+    - platform: time
+      at: "22:30:00"
+
+###############################Surah Al-Baqarah################################
+- action:
+  - data:
+      entity_id: media_player.azan_group
+      media_content_id: https://quran.s3.fr-par.scw.cloud/medias/mp3/coran/saud_al-shuraim/saud_al-shuraim_hq_(2).mp3
+      media_content_type: audio/mp3
+    service: media_player.play_media
+  - data:
+      entity_id: media_player.azan_group
+      volume_level: '0.5'
+    service: media_player.play_media
+  alias: Play Surah AlBaqarah
+  trigger:
+    - platform: time
+      at: "14:00:00"
+
+
+################################### HA Restart#################################      
+
+- alias: Restart HA
+  trigger:
+    platform: time
+    at: "01:00:00"
+  action:
+    - service: homeassistant.restart
